--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,59 +1,124 @@
 <mat-drawer-container id="menu-drawer" class="example-container" autosize>
-  
-<div class="h-screen min-h-[700px] relative !bg-[#234436] z-30">
-  <div class="bg-[#131f07]">
-  <div class="fixed top-0 z-30"><app-header [toggleDrawer]="toggleDrawer.bind(this)" (toggleEvent)="handleToggleEvent($event)" (searchEvent)="onSearchLocation($event)"></app-header></div>
-  <mat-drawer #drawer class="!bg-primaryBg mt-[55px] !block !z-50 !h-screen !w-[805px]" mode="side">
-    <app-sidebar-drawer [type]="type"></app-sidebar-drawer>
-  </mat-drawer>
-  <div #mapContainer id="mapContainer" class="map  h-full absolute opacity-50"></div>
-  <div class="flex justify-end end-0 gap-3 pr-[12px] absolute bottom-[12px]">
-    <div class="relative z-30 w-full">
-     <app-footer (drawTypeSelected)="setDrawType($event)" [zoomLevel]="zoomLevel" (zoomIn)="zoomIn()" (zoomOut)="zoomOut()" (zoomLevelChange)="onZoomLevelChange($event)" [longitude]="longitude" [latitude]="latitude"></app-footer>
-    </div>
-  </div>
-  <div class="relative flex ">
-    <div class="absolute right-0 min-h-[120px] min-w-[40px] w-auto rounded-[5px] bg-secondaryBg z-40 mr-[12px] top-[50px]">
-      <div class="border-b border-b-solid border-custom-border p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer" [ngClass]="currentAction === 'location' ? 'bg-yellow rounded-t-[5px]':''" (click)="handleAction('location')">
-        @if (currentAction === 'location') {
-          <img src="assets/svg-icons/pin-location-active.svg" alt="pin location icon" />
-        }
-        @if (currentAction !== 'location') {
-          <img src="assets/svg-icons/pin-location-icon.svg" alt="pin location icon" />
-        }
+  <div
+    class="h-screen min-h-[700px] relative"
+    [ngClass]="isGoogleLayerActive === 'OpenStreetMap' ? '!bg-[#234436]' : ' z-30'"
+  >
+    <div
+      class=""
+      [ngClass]="isGoogleLayerActive ==='OpenStreetMap' ? 'bg-[#131f07]  z-30' : ' z-30'"
+    >
+      <div class="fixed top-0 z-30">
+        <app-header
+          [toggleDrawer]="toggleDrawer.bind(this)"
+          (toggleEvent)="handleToggleEvent($event)"
+          (searchEvent)="onSearchLocation($event)"
+        ></app-header>
       </div>
-      <div class="border-b border-b-solid border-custom-border p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer" [ngClass]="currentAction === 'polygon' ? 'bg-yellow':''" (click)="handleAction('polygon')">
-        @if (currentAction === 'polygon') {
-          <img src="assets/svg-icons/polygon-draw-icon-active.svg" alt="pin location icon" />
-        }
-        @if (currentAction !== 'polygon') {
-          <img src="assets/svg-icons/polygon-draw-icon.svg" alt="pin location icon" />
-        }
+      <mat-drawer
+        #drawer
+        class="!bg-primaryBg mt-[55px] !block !z-50 !h-screen !w-[805px]"
+        mode="side"
+      >
+        <app-sidebar-drawer [type]="type"></app-sidebar-drawer>
+      </mat-drawer>
+      <div
+        #mapContainer
+        id="mapContainer"
+        class="map h-full absolute"
+        [ngClass]="isGoogleLayerActive !== 'OpenStreetMap' ? 'z-0' : 'opacity-50'"
+      ></div>
+      <div
+        class="flex justify-end end-0 gap-3 pr-[12px] absolute bottom-[12px]"
+      >
+        <div class="relative z-50 w-full">
+          <app-footer
+            (toggleLayer)="toggleMapLayer($event)"
+            (drawTypeSelected)="setDrawType($event)"
+            [zoomLevel]="zoomLevel"
+            (zoomIn)="zoomIn()"
+            (zoomOut)="zoomOut()"
+            (zoomLevelChange)="onZoomLevelChange($event)"
+            [longitude]="longitude"
+            [latitude]="latitude"
+            (dateRangeChanged)="onDateRangeChanged($event)"
+            [ActiveLayer]="isGoogleLayerActive"
+          ></app-footer>
+        </div>
       </div>
-      <div class="p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer" [ngClass]="currentAction === 'line' ? 'bg-yellow rounded-b-[5px]':''" (click)="handleAction('line')">
-        @if (currentAction === 'line') {
-          <img src="assets/svg-icons/line-draw-icon-active.svg" alt="pin location icon" />
-        }
-        @if (currentAction !== 'line') {
-          <img src="assets/svg-icons/line-draw-icon.svg" alt="pin location icon" />
-        }
-      </div>
-      <!-- <div class="border-b border-b-solid border-custom-border p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer" (click)="handleAction('settings')">
+      <div class="relative flex">
+        <div
+          class="absolute right-0 min-h-[120px] min-w-[40px] w-auto rounded-[5px] bg-secondaryBg z-40 mr-[12px] top-[50px]"
+        >
+          <div
+            class="border-b border-b-solid border-custom-border p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer"
+            [ngClass]="
+              currentAction === 'location' ? 'bg-yellow rounded-t-[5px]' : ''
+            "
+            (click)="handleAction('location')"
+          >
+            @if (currentAction === 'location') {
+            <img
+              src="assets/svg-icons/pin-location-active.svg"
+              alt="pin location icon"
+            />
+            } @if (currentAction !== 'location') {
+            <img
+              src="assets/svg-icons/pin-location-icon.svg"
+              alt="pin location icon"
+            />
+            }
+          </div>
+          <div
+            class="border-b border-b-solid border-custom-border p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer"
+            [ngClass]="currentAction === 'polygon' ? 'bg-yellow' : ''"
+            (click)="handleAction('polygon')"
+          >
+            @if (currentAction === 'polygon') {
+            <img
+              src="assets/svg-icons/polygon-draw-icon-active.svg"
+              alt="pin location icon"
+            />
+            } @if (currentAction !== 'polygon') {
+            <img
+              src="assets/svg-icons/polygon-draw-icon.svg"
+              alt="pin location icon"
+            />
+            }
+          </div>
+          <div
+            class="p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer"
+            [ngClass]="
+              currentAction === 'line' ? 'bg-yellow rounded-b-[5px]' : ''
+            "
+            (click)="handleAction('line')"
+          >
+            @if (currentAction === 'line') {
+            <img
+              src="assets/svg-icons/line-draw-icon-active.svg"
+              alt="pin location icon"
+            />
+            } @if (currentAction !== 'line') {
+            <img
+              src="assets/svg-icons/line-draw-icon.svg"
+              alt="pin location icon"
+            />
+            }
+          </div>
+          <!-- <div class="border-b border-b-solid border-custom-border p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer" (click)="handleAction('settings')">
         <img src="assets/svg-icons/filter-icon.svg" alt="pin location icon" />
       </div>
       <div class="p-[10px] h-[40px] min-w-[40px] w-auto flex justify-center items-center cursor-pointer" (click)="handleAction('layers')">
         <img src="assets/svg-icons/layer-icon.svg" alt="pin location icon" />
       </div> -->
-    </div>
+        </div>
+      </div>
 
-  </div>
-  
-  <!-- <div class="drawing-controls z-30 relative flex gap-3 text-white">
+      <!-- <div class="drawing-controls z-30 relative flex gap-3 text-white">
     <button (click)="setDrawType('Polygon')">Draw Polygon</button>
     <button (click)="setDrawType('Circle')">Draw Circle</button>
     <button (click)="setDrawType('Box')">Draw Box</button>
 
   </div> -->
-</div>
-</div>
+    </div>
+  </div>
 </mat-drawer-container>
