--- a/src/app/dailogs/datepicker-dailog/datepicker-dailog.component.html
+++ b/src/app/dailogs/datepicker-dailog/datepicker-dailog.component.html
@@ -1,62 +1,133 @@
- <div class="range-date-picker">
-    <mat-card class="calendar-card">
-      <!-- <mat-calendar
+<div class="range-date-picker">
+  <mat-card class="calendar-card">
+    <!-- <mat-calendar
       [(selected)]="selectedDate"
       (selectedChange)="onDateSelected($event)"
       class="w-full"
       [dateClass]="dateClass"
     ></mat-calendar> -->
     <div class="flex justify-between gap-3">
-    <div class="flex flex-col w-[334px] gap-3 !relative justify-end">
-    <div class="range-calendar-container !relative !h-[300px]">
-      <!-- Date Range Picker with Hidden Input Fields -->
-      <ngx-daterangepicker-material
-  (choosedDate)="choosedDate($event)"
-  [linkedCalendars]="false"
-  [locale]="{ format: 'YYYY-MM-DD' }"
-  [autoApply]="true"
-  [showDropdowns]="true"
-  [startDate]="startDate"
-  [endDate]="endDate"
-  [maxDate]="maxDate">
-</ngx-daterangepicker-material>
-    </div>
-    <div class=" w-full z-50">
-      <mat-form-field appearance="outline" class="w-full">
-        <mat-label>Start</mat-label>
-        <input #startDateInput [value]="startDate ? startDate.format('YYYY.MM.DD HH:mm [UTC]') : ''" matInput placeholder="Placeholder" class="!text-secondaryText placeholder:!text-secondaryText">
-       
-      </mat-form-field>
+      <div class="flex flex-col w-[334px] gap-3 !relative justify-end">
+        <div class="range-calendar-container !relative !h-[300px]">
+          <!-- Date Range Picker with Hidden Input Fields -->
+          <ngx-daterangepicker-material
+            (choosedDate)="choosedDate($event)"
+            [linkedCalendars]="false"
+            [locale]="{ format: 'MM.DD.YYYY' }"
+            [autoApply]="true"
+            [showDropdowns]="true"
+            [startDate]="startDate"
+            [endDate]="endDate"
+            [maxDate]="maxDate"
+          >
+          </ngx-daterangepicker-material>
+        </div>
+        <div class="w-full z-50">
+          <mat-form-field appearance="outline" class="w-full mb-2">
+            <mat-label>Start</mat-label>
+            <input
+             
+              [value]="
+                startDate ? startDate.format('MM.DD.YYYY HH:mm [UTC]') : ''
+              "
+               [formControl]="startDateControl"
+               (input)="onInputChange('startDate',$event)"
+               (blur)="onInputBlur('startDate')"
+              matInput
+              placeholder="Placeholder"
+              class="!text-secondaryText placeholder:!text-secondaryText"
+            />
+            <mat-error class="mb-2">
+                @if (startDateControl.hasError('invalidDateFormat')) {
+                  Invalid date format. Use MM.DD.YYYY HH:mm [UTC].
+                } @else if (startDateControl.hasError('futureDate')) {
+                  Date cannot be in the future.
+                } @else if (startDateControl.hasError('startAfterEnd')) {
+                  Start date cannot be after the end date.
+                }
+              </mat-error>
+          </mat-form-field>
 
-      <mat-form-field appearance="outline" class="w-full">
-        <mat-label>End</mat-label>
-        <input [value]="endDate ? endDate.format('YYYY.MM.DD HH:mm [UTC]'): ''" matInput placeholder="Placeholder" class="!text-secondaryText placeholder:!text-secondaryText">
-       
-      </mat-form-field>
+          <mat-form-field appearance="outline" class="w-full">
+            <mat-label>End</mat-label>
+            <input
+              [value]="endDate ? endDate.format('MM.DD.YYYY HH:mm [UTC]') : ''"
+              matInput
+              [formControl]="endDateControl"
+                (input)="onInputChange('endDate',$event)"
+                (blur)="onInputBlur('endDate')"
+              placeholder="Placeholder"
+              class="!text-secondaryText placeholder:!text-secondaryText"
+            />
+            <mat-error class="mb-2">
+                @if (endDateControl.hasError('invalidDateFormat')) {
+                  Invalid date format. Use MM.DD.YYYY HH:mm [UTC].
+                } @else if (endDateControl.hasError('futureDate')) {
+                  Date cannot be in the future.
+                } @else if (endDateControl.hasError('endBeforeStart')) {
+                  End date cannot be before the start date.
+                }
+              </mat-error>
+          </mat-form-field>
+        </div>
+      </div>
+
+      <div class="flex flex-col gap-[10px] py-2">
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('24hours')"
+        >
+          24 Hours
+        </button>
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('3days')"
+        >
+          3 Days
+        </button>
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('7days')"
+        >
+          7 Days
+        </button>
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('14days')"
+        >
+          14 Days
+        </button>
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('28days')"
+        >
+          28 Days
+        </button>
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('3months')"
+        >
+          3 Months
+        </button>
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('6months')"
+        >
+          6 Months
+        </button>
+        <button
+          class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
+          (click)="setDateRange('9months')"
+        >
+          9 Months
+        </button>
+      </div>
     </div>
-    </div>
-      
-    <div class="flex flex-col gap-[10px] py-2">
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('24hours')">24 Hours</button>
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('3days')">3 Days</button>
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('7days')">7 Days</button>
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('14days')">14 Days</button>
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('28days')">28 Days</button>
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('3months')">3 Months</button>
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('6months')">6 Months</button>
-      <button class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center" 
-              (click)="setDateRange('9months')">9 Months</button>
-    </div>
-    
-    </div>
-      <button class="text-center w-full h-[38px] py-[10px] bg-yellow rounded-[5px]" (click)="applyDateRange()">Apply</button>
-    </mat-card>
-  </div>
-  
+    <button
+      class="text-center w-full h-[38px] py-[10px] bg-yellow rounded-[5px]"
+      (click)="applyDateRange()"
+    >
+      Apply
+    </button>
+  </mat-card>
+</div>
