--- a/src/app/components/shared/loading-bar/loading-bar.component.html
+++ b/src/app/components/shared/loading-bar/loading-bar.component.html
@@ -1,3 +1,3 @@
-<ng-container *ngIf="show">
+<!-- <ng-container *ngIf="show">
     <mat-progress-bar [mode]="mode" [value]="progress"></mat-progress-bar>
-</ng-container>
+</ng-container> -->
