--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -74,3 +74,8 @@
     border-radius: 5px !important;
   }
 }
+
+
+::ng-deep.leaflet-container img.leaflet-image-layer{
+  object-fit: cover !important;
+}
