--- a/src/app/dailogs/datepicker-dailog/datepicker-dailog.component.html
+++ b/src/app/dailogs/datepicker-dailog/datepicker-dailog.component.html
@@ -77,7 +77,7 @@
           class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
           (click)="setDateRange('24hours')"
         >
-          24 Hours
+          1 day
         </button>
         <button
           class="!w-[84px] !h-[40px] cursor-pointer bg-primaryBg !border !text-secondary-heiglight !border-solid !border-custom-secondary !rounded-[5px] flex items-center justify-center"
