--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
      <img src="assets/svg-icons/menu-icon.svg" alt=""/>
 </span>
 <!-- (click)="onToggleDrawer('library')" -->
-<div  class="flex items-center justify-center min-w-[135px] w-auto h-[40px] py-1.5 px-[30px] gap-[15px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
+<div (click)="onToggleDrawer('library')" class="flex items-center justify-center min-w-[135px] w-auto h-[40px] py-1.5 px-[30px] gap-[15px] border-r border-l-0 border-y-0 border-secondary cursor-pointer">
     <img src="assets/svg-icons/location-icon-active.svg" alt="" *ngIf="toggleType === 'library'" />
     <img src="assets/svg-icons/location-icon.svg" alt="" *ngIf="toggleType !== 'library'" />
     <span class="text-xs leading-[18px] font-Barlow uppercase font-bold" [ngClass]="toggleType === 'library' ? 'text-yellow':'text-secondaryText'">library</span>
